--- a/quan/quan.html
+++ b/quan/quan.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <title>石头剪刀布</title>
     <script src="lufylegend-1.7.6.min.js"></script>
+	<style>
+	</style>
 </head>
 <body>
     <div id="myDiv">
         
     </div>
     <script>
-        init(200,"myDiv",600,300,main);
+        init(200,"myDiv",1080,300,main);
         var imgData=new Array(
             {name:"shitou",path:"st.png"},
             {name:"jiandao",path:"jd.png"},
