--- a/quan/snake.html
+++ b/quan/snake.html
@@ -169,7 +169,7 @@ function checkDeath() {
         if (head.x == snake[i].x && head.y == snake[i].y) {
            // alert("Game over!");
             window.android.over("Game over!");
-            window.location.reload();
+            //window.location.reload();
         }
     }
 }
