--- a/moni/abnerming.html
+++ b/moni/abnerming.html
@@ -55,7 +55,7 @@
 <div class="div_all">
     <div class="div_login">
         <div class="div_login_title">
-            Android电商资讯实战月考
+            Android资讯项目实战月考
         </div>
         <input type="text" placeholder="请输入账号" id="user_phone"/><br/>
         <input type="text" placeholder="请输入密码" id="user_pass"/>
