--- a/moni/image.html
+++ b/moni/image.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<img src="https://cdn2.jianshu.io/assets/default_avatar/11-4d7c6ca89f439111aff57b23be1c73ba.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/96/h/96">
+<img src="https://avatars0.githubusercontent.com/u/11796811?s=40&v=4">
 
 </body>
 </html>
