--- a/moni/image.html
+++ b/moni/image.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<img src="https://avatars0.githubusercontent.com/u/11796811?s=40&v=4">
+<img src="https://www.gstatic.com/mobilesdk/160503_mobilesdk/logo/2x/firebase_28dp.png">
 
 </body>
 </html>
