--- a/moni/image.html
+++ b/moni/image.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-    <h2>改变前</h2>    
-<img src="https://avatar-static.segmentfault.com/194/030/1940304143-5a72802e507db_small">
+    <h2>改变后</h2>    
+<img src="https://avatars0.githubusercontent.com/u/11796811?s=40&v=4">
 
 </body>
 </html>
