--- a/bw/user.html
+++ b/bw/user.html
@@ -4,8 +4,8 @@
 	</head>
 	
 	<body>
-		<h1>userId:</h1>
-		<h1>sessionId:</h1>
+		<h1>userId:1111</h1>
+		<h1>sessionId:1111</h1>
 	</body>
 
 </html>
